Fix numbers divided by zero not showing in display

--- a/style.css
+++ b/style.css
@@ -72,6 +72,6 @@ button {
   flex-direction: column;
 }
 
-.clearButton {
+#clearButton {
   background-color: wheat;
 }
